--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Дизеринг изображения</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/styles.css" rel="stylesheet">
+    <link href="/src/static.css" rel="stylesheet">
 </head>
 <body>
 <div class="container py-4">
@@ -37,9 +37,9 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/gh/danielepiccone/ditherjs/dist/ditherjs.dist.js"></script>
-<script src="/static/style.js"></script>
-<script src="/static/image-processing.js"></script>
-<script src="/static/dither.js"></script>
-<script src="/static/levels.js"></script>
+<script src="/src/staticjs"></script>
+<script src="/src/staticprocessing.js"></script>
+<script src="/src/static.js"></script>
+<script src="/src/static.js"></script>
 </body>
 </html>
