--- a/src/index.html
+++ b/src/index.html
@@ -5,41 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Дизеринг изображения</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/src/static.css" rel="stylesheet">
+    <link href="/static/styles.css" rel="stylesheet">
 </head>
 <body>
-<div class="container py-4">
-    <div class="mb-3 text-center">
-        <input type="file" id="imageInput" class="form-control" accept="image/*">
+    <div class="container py-4">
+        <div class="mb-3 text-center">
+            <input type="file" id="imageInput" class="form-control" accept="image/*">
+        </div>
+        <div class="mb-3 text-center">
+            <select id="algorithmSelect" class="form-select w-100">
+                <option value="ordered">Ordered</option>
+                <option value="diffusion">Diffusion</option>
+                <option value="atkinson">Atkinson</option>
+            </select>
+        </div>
+        <div class="mb-3 slider-container">
+            <label for="shadowSlider" class="form-label">Тени</label>
+            <input type="range" id="shadowSlider" class="form-range range-slider" min="0" max="255" value="0" data-zero_point="0">
+        </div>
+        <div class="mb-3 slider-container">
+            <label for="midtoneSlider" class="form-label">Средние</label>
+            <input type="range" id="midtoneSlider" class="form-range range-slider" min="0" max="255" value="128" data-zero_point="128">
+        </div>
+        <div class="mb-3 slider-container">
+            <label for="highlightSlider" class="form-label">Света</label>
+            <input type="range" id="highlightSlider" class="form-range range-slider" min="0" max="255" value="255" data-zero_point="255">
+        </div>
+        <div class="text-center">
+            <canvas id="canvas" width="480" height="800" class="border border-dark w-100"></canvas>
+        </div>
     </div>
-    <div class="mb-3 text-center">
-        <select id="algorithmSelect" class="form-select w-100">
-            <option value="ordered">Ordered</option>
-            <option value="diffusion">Diffusion</option>
-            <option value="atkinson">Atkinson</option>
-        </select>
-    </div>
-    <div class="mb-3 slider-container">
-        <label for="shadowSlider" class="form-label">Тени</label>
-        <input type="range" id="shadowSlider" class="form-range range-slider" min="0" max="255" value="0" data-zero_point="0">
-    </div>
-    <div class="mb-3 slider-container">
-        <label for="midtoneSlider" class="form-label">Средние</label>
-        <input type="range" id="midtoneSlider" class="form-range range-slider" min="0" max="255" value="128" data-zero_point="128">
-    </div>
-    <div class="mb-3 slider-container">
-        <label for="highlightSlider" class="form-label">Света</label>
-        <input type="range" id="highlightSlider" class="form-range range-slider" min="0" max="255" value="255" data-zero_point="255">
-    </div>
-    <div class="text-center">
-        <canvas id="canvas" width="480" height="800" class="border border-dark w-100"></canvas>
-    </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/gh/danielepiccone/ditherjs/dist/ditherjs.dist.js"></script>
-<script src="/src/staticjs"></script>
-<script src="/src/staticprocessing.js"></script>
-<script src="/src/static.js"></script>
-<script src="/src/static.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/danielepiccone/ditherjs/dist/ditherjs.dist.js"></script>
+    <script src="/static/style.js"></script>
+    <script src="/static/image-processing.js"></script>
+    <script src="/static/dither.js"></script>
+    <script src="/static/levels.js"></script>
 </body>
 </html>
