--- a/index.html
+++ b/index.html
@@ -9,33 +9,65 @@
 </head>
 <body>
     <div class="container py-4">
-        <div class="mb-3 text-center">
-            <input type="file" id="imageInput" class="form-control" accept="image/*">
-        </div>
-        <div class="mb-3 text-center">
-            <select id="algorithmSelect" class="form-select w-100">
-                <option value="ordered">Ordered</option>
-                <option value="diffusion">Diffusion</option>
-                <option value="atkinson">Atkinson</option>
-            </select>
-        </div>
-        <div class="mb-3 slider-container">
-            <label for="shadowSlider" class="form-label">Тени</label>
-            <input type="range" id="shadowSlider" class="form-range range-slider" min="0" max="255" value="0" data-zero_point="0">
-        </div>
-        <div class="mb-3 slider-container">
-            <label for="midtoneSlider" class="form-label">Средние</label>
-            <input type="range" id="midtoneSlider" class="form-range range-slider" min="0" max="255" value="128" data-zero_point="128">
-        </div>
-        <div class="mb-3 slider-container">
-            <label for="highlightSlider" class="form-label">Света</label>
-            <input type="range" id="highlightSlider" class="form-range range-slider" min="0" max="255" value="255" data-zero_point="255">
-        </div>
-        <div class="text-center">
-            <canvas id="canvas" width="480" height="800" class="border border-dark w-100"></canvas>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 col-custom">
+                <div class="mb-3 text-center">
+                    <input type="file" id="imageInput" class="form-control" accept="image/*">
+                </div>
+                <div class="accordion" id="imageSettings">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#ditheringSettings" aria-expanded="true" aria-controls="ditheringSettings">
+                                Dithering settings
+                            </button>
+                        </h2>
+                        <div id="ditheringSettings" class="accordion-collapse collapse show">
+                            <div class="accordion-body">
+                                <select id="algorithmSelect" class="form-select w-100">
+                                    <option value="ordered">Ordered</option>
+                                    <option value="diffusion">Diffusion</option>
+                                    <option value="atkinson">Atkinson</option>
+                                </select>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#imageLevels" aria-expanded="true" aria-controls="imageLevels">
+                                Уровни
+                            </button>
+                        </h2>
+                        <div id="imageLevels" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <div class="mb-3 slider-container">
+                                    <label for="shadowSlider" class="form-label">Тени</label>
+                                    <input type="range" id="shadowSlider" class="form-range range-slider" min="0" max="255" value="0" data-zero_point="0">
+                                </div>
+                                <div class="mb-3 slider-container">
+                                    <label for="midtoneSlider" class="form-label">Средние</label>
+                                    <input type="range" id="midtoneSlider" class="form-range range-slider" min="0" max="255" value="128" data-zero_point="128">
+                                </div>
+                                <div class="mb-3 slider-container">
+                                    <label for="highlightSlider" class="form-label">Света</label>
+                                    <input type="range" id="highlightSlider" class="form-range range-slider" min="0" max="255" value="255" data-zero_point="255">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col-12 col-md-6 col-custom">
+                <div class="text-center">
+                    <canvas id="canvas" width="480" height="800" class="border border-dark w-100"></canvas>
+                </div>
+            </div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/danielepiccone/ditherjs/dist/ditherjs.dist.js"></script>
     <script src="./static/style.js"></script>
     <script src="./static/image-processing.js"></script>
