feat: add two palettes: cga 4 colors and gameboy dmg-01

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                                     <label for="paletteSelect" class="form-label">Палитра</label>
                                     <select id="paletteSelect" class="form-select">
                                         <option value="paletteRBW">Red, Black, White</option>
+                                        <option value="paletteCGA4">CGA 4 colors</option>
+                                        <option value="paletteGBDMG01">GameBoy DMG-01</option>
                                         <option value="paletteNES15">NES 15 colors</option>
                                         <option value="paletteNES54">NES 54 colors</option>
                                     </select>
