feat: add don't dither algorithm

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                                         <option value="ordered">Ordered</option>
                                         <option value="diffusion">Diffusion</option>
                                         <option value="atkinson">Atkinson</option>
+                                        <option value="null">Don't dither</option>
                                     </select>
                                 </div>
                                 <div class="slider-container">
