--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                                     <button type="button" id="bleSend" class="btn btn-success" disabled>Send image</button>
                                     <button type="button" id="bleConnect" class="btn btn-primary">Connect</button>
                                 </div>
+                                <div id="bleSendPBContainer" class="progress mt-3 d-none" role="progressbar" aria-label="image send progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                    <div id="bleSendProgressBar" class="progress-bar" style="width: 0%">0%</div>
+                                </div>
                             </div>
                         </div>
                     </div>
