--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                                     <label for="paletteSelect" class="form-label">Палитра</label>
                                     <select id="paletteSelect" class="form-select">
                                         <option value="paletteRBW">Red, Black, White</option>
+                                        <option value="paletteBW">Black, White</option>
                                         <option value="paletteCGA4">CGA 4 colors</option>
                                         <option value="paletteGBDMG01">GameBoy DMG-01</option>
                                         <option value="paletteNES15">NES 15 colors</option>
